Documentation refactoring